--- a/public/global.css
+++ b/public/global.css
@@ -28,15 +28,26 @@ input[type="range"]::-webkit-slider-thumb {
   width: 15px;
   border-radius: 20px;
   border: none;
-  background: rgba(255, 255, 255, 0.8);
+  background: rgba(255, 255, 255, 0.5);
 }
 
+input[type="range"]::-webkit-slider-thumb,
 input[type="range"]::-moz-range-thumb {
   height: 15px;
   width: 15px;
+  border: none;
+  border-radius: 20px;
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 input[type="range"]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 15px;
+  background: rgba(255, 255, 255, 0.3);
+  border-radius: 20px;
+}
+
+input[type="range"]::-moz-range-track {
   width: 100%;
   height: 15px;
   background: rgba(255, 255, 255, 0.3);
