--- a/public/global.css
+++ b/public/global.css
@@ -9,6 +9,7 @@ body {
   overflow: hidden;
   margin: 0;
   font-family: "IBM Plex Sans", sans-serif;
+  -webkit-tap-highlight-color: transparent;
 }
 
 input[type="range"] {
@@ -29,6 +30,12 @@ input[type="range"]::-webkit-slider-thumb {
   border-radius: 20px;
   border: none;
   background: rgba(255, 255, 255, 0.5);
+  box-shadow: none;
+  transition-duration: 0.2s;
+}
+
+input[type="range"]::-webkit-slider-thumb:hover {
+  box-shadow:  0 0 5px rgba(0, 0, 0, 0.2), inset 0 2px 10px rgba(255, 255, 255, 0.5);
 }
 
 input[type="range"]::-webkit-slider-thumb,
